# crewai-substrate-memory

./: README.md  pyproject.toml
src/crewai_substrate/: __init__.py  client.py  memory.py
