[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-substrate-memory"
version = "0.1.2"
description = "SUBSTRATE persistent memory provider for CrewAI -- causal memory, emotion, and identity for your AI crews."
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
authors = [
    { name = "Garmo Labs", email = "hello@garmolabs.com" },
]
keywords = [
    "crewai",
    "substrate",
    "memory",
    "ai",
    "mcp",
    "causal-memory",
    "emotional-state",
    "garmo-labs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "crewai>=0.80",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://garmolabs.com/substrate.html"
Documentation = "https://github.com/PKaldone/substrate-mcp"
Repository = "https://github.com/PKaldone/substrate-mcp"
Issues = "https://garmolabs.com/substrate.html"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_substrate"]
